feat(app): add production factory navigation
